@@ -12,6 +12,13 @@ public class DwdCartAddApp extends BaseSQLApp {
         super(Constant.DWD_CART_ADD_SERVER_PORT, Constant.PARALLELISM, Constant.DWD_CART_ADD);
     }
 
+    /**
+     * 启动参数
+     * --add-opens java.base/java.nio=ALL-UNNAMED
+     * --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+     * --add-opens java.base/java.lang=ALL-UNNAMED
+     * --add-opens java.base/java.util=ALL-UNNAMED
+     */
     public static void main(String[] args) throws Exception {
         new DwdCartAddApp().run();
     }
