@@ -13,6 +13,13 @@ public class DwdOrderDetailApp extends BaseSQLApp {
         super(Constant.DWD_ORDER_DETAIL_SERVER_PORT, Constant.PARALLELISM, Constant.DWD_ORDER_DETAIL);
     }
 
+    /**
+     * 启动参数
+     * --add-opens java.base/java.nio=ALL-UNNAMED
+     * --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+     * --add-opens java.base/java.lang=ALL-UNNAMED
+     * --add-opens java.base/java.util=ALL-UNNAMED
+     */
     public static void main(String[] args) throws Exception {
         new DwdOrderDetailApp().run();
     }
