@@ -24,6 +24,13 @@ public class DwsCartStatisticsApp extends BaseApp {
         super(Constant.DWS_CART_STATISTICS_SERVER_PORT, Constant.PARALLELISM, Constant.DWD_CART_ADD, Constant.DWS_CART_STATISTICS);
     }
 
+    /**
+     * 启动参数
+     * --add-opens java.base/java.nio=ALL-UNNAMED
+     * --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+     * --add-opens java.base/java.lang=ALL-UNNAMED
+     * --add-opens java.base/java.util=ALL-UNNAMED
+     */
     public static void main(String[] args) throws Exception {
         new DwsCartStatisticsApp().run();
     }
